--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="suit" id="cardTop">
             <img src="" alt="">
         </div>
-        <div id="suiteValue">
+        <div id="suitValue">
             <h1></h1>
         </div>
         <div class="suit" id="cardBtm">
@@ -46,6 +46,10 @@
         </div>
 
     </div>
+
+    <footer>
+        <p>2022&copy;  <a href="https://coderwine.github.io/" target="_blank" >ericjwinebrenner</a></p>
+    </footer>
 
     <script src="./deckSample.js"></script>
 </body>
