added repo link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <footer>
-        <p>2022&copy;  <a href="https://coderwine.github.io/" target="_blank" >ericjwinebrenner</a></p>
+        <p>2022&copy;  <a href="https://github.com/coderwine/testCardDeck" target="_blank" >github</a></p>
     </footer>
 
     <script src="./deckSample.js"></script>
